src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_init_with_meta.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
    - /root/init.lua
    - /root/init.luau
    - /root/init.server.lua
    - /root/init.server.luau
    - /root/init.client.lua
    - /root/init.client.luau
    - /root/init.plugin.lua
    - /root/init.plugin.luau
    - /root/init.csv
    - /root/init.meta.json
    - /root/init.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: manually specified
  middleware: ~
  schema: ~
name: root
class_name: LocalizationTable
properties:
  Contents:
    String: "[{\"example\":\"An exclamation of despair\",\"key\":\"Ack\",\"source\":\"Ack!\",\"values\":{\"es\":\"¡Ay!\"}}]"
children: []
